Prepara nivel e chama tela do jogo

--- a/index.html
+++ b/index.html
@@ -6,11 +6,35 @@
 		<title>Estourando balões</title>
 
 		<script language='Javascript'>
-			
+
+			function iniciaJogo() {
+				var nivel = document.getElementById('nivel').value;
+
+				window.location.href = 'jogo.html?' + nivel;
+
+				console.log(nivel);
+
+
+
+			}
+
 		</script>
+
 	</head>
 
 	<body>
+
+		<div>
+			<p>
+				<b>Nível:</b>
+				<select id="nivel">
+					<option value="1">Fácil</option>
+					<option value="2">Normal</option>
+					<option value="3">Difícil</option>
+				</select>
+			</p>
+			<img src="imagens/iniciar.png" onclick="iniciaJogo()">
+		</div>
 
 	</body>
 	
