--- a/jogo.html
+++ b/jogo.html
@@ -9,6 +9,37 @@
 
 	<body>
 
+		<div style="float: left; width: auto; height: 500px; background: #fff; border: 1px solid #a2a2a2;">
+
+			<table border="1">
+				<tr>
+					<td><img src="imagens/balao_azul_grande.png"></td>
+					<td>10</td>
+				</tr>
+			</table>
+			
+			<br/>
+
+			<table border="1">
+				<tr>
+					<td><img src="imagens/balao_azul_grande_estourado.png"></td>
+					<td>10</td>
+				</tr>
+			</table>
+
+			<br/>
+
+			<table border="1" style="width: 140px; height: 132px;">
+				<tr>
+					<td style="background: url('imagens/cronometro.png')"></td>
+				</tr>
+			</table>
+
+		</div>
+
+		<div style="float: left; width: 600px; height: 500px; background: url('imagens/cenario.png'); background-position: bottom;"></div>
+
+
 	</body>
 	
 </html>
